chore: refactor CSS for better readability and to avoid code duplication

--- a/ichub-frontend/src/assets/styles/config/_variables.scss
+++ b/ichub-frontend/src/assets/styles/config/_variables.scss
@@ -44,6 +44,7 @@ $brand-dark: rgb(0, 0, 0);
 $brand-primary: rgb(1, 32, 96);
 $brand-orange: rgb(250, 160, 35);
 $brand-gray: rgba(77, 77, 77, 0.56);
+$brand-dark-gray: rgba(35, 35, 38, 0.76);
 $brand-text: rgb(248, 249, 250);
 $brand-shadow: rgba(255, 255, 255, 0.50);
 $brand-border: rgba(1, 86, 255, 0.26);
