--- a/ichub-frontend/src/assets/styles/pages/_ProductList.scss
+++ b/ichub-frontend/src/assets/styles/pages/_ProductList.scss
@@ -39,22 +39,6 @@
     }
 }
 
-.product-cards {
-    .product-card {
-        background: $brand-dark !important;
-        @include mixins.space-shadow($brand-blue);
-        @include mixins.rounded-bordered;
-
-        &:hover {
-            border: 2px solid rgba($brand-light-blue, 0.85) !important;
-        }
-    }
-
-    .MuiChip-icon {
-        color: $brand-dark !important;
-    }
-}
-
 .product-list-pagination {
     p {
         color: $brand-text !important;
